# ai-intelligence-os

./: .env.development.example  .env.example  .env.production.example  .env.test.example  .gitignore  Dockerfile.backend  Dockerfile.frontend  Makefile  README.md  conftest.py  docker-compose.yml  test_notion.py
backend/: README.md  alembic.ini  config.py  context_vars.py  logging_config.py  main.py  metrics.py  models.py  pyproject.toml  rate_limiter.py  trace.py
backend/agents/: base.py  registry.py
backend/agents/analyst/: __init__.py  agent.py
backend/agents/knowledge/: agent.py  schemas.py
backend/agents/notification/: __init__.py  agent.py  schemas.py
backend/agents/project_manager/: __init__.py  agent.py  schemas.py
backend/alembic/: env.py  script.py.mako
backend/app/: bootstrap.py
backend/config/: litellm_config.yaml  models.yaml
backend/connectors/: __init__.py  base.py
backend/database/: base.py  connection.py  models.py
backend/events/: __init__.py  agent_event.py  event.py  publisher.py  subscriber.py
backend/mcp/: __init__.py  base.py  client.py  registry.py  schemas.py
backend/pipelines/: __init__.py  article_pipeline.py
backend/prompts/: __init__.py  analyst.md  analyst_agent.md  knowledge_agent.md  loader.py  notification_agent.md  project_manager_agent.md  pronunciation_agent.md  research.md  research_agent.md  translator.md  translator_agent.md
backend/repositories/: __init__.py  agent_run_repository.py  agent_stage_progress_repository.py  article_repository.py  audit_repository.py  base_repository.py  knowledge_repository.py  report_repository.py  task_repository.py  user_repository.py
backend/routers/: __init__.py  agents.py  api.py  articles.py  audit.py  auth.py  deps.py  errors.py  health.py  knowledge.py  pagination.py  reports.py  scheduler.py  security_headers.py  tasks.py
backend/schemas/: agent_run.py  article.py  article_create.py  audit.py  error.py  knowledge.py  knowledge_create.py  rag.py  report.py  report_create.py  response.py  search.py  task.py  task_create.py  user.py
backend/services/: agent_runtime_service.py  agent_service.py  article_service.py  knowledge_service.py  refresh_token_store.py  report_service.py  task_service.py  user_service.py
backend/tools/: base.py  registry.py
backend/utils/: auth.py  jwt.py
backend/workflows/: autonomous_intelligence.py  base.py  daily_intelligence.py  error_classifier.py  executor.py  knowledge_pipeline.py  registry.py  retry_executor.py
(+333 files in other folders)
